<resources>
    <string name="app_name">TestTabLayout</string>
    <string name="btn_Main">Вход</string>
    <string name="page_Main">Главная</string>
    <string name="page_Workout">Тренировка</string>
    <string name="page_History">История тренировок</string>

<!--    <string name="btn_Date">Дата</string>-->
<!--    <string name="btn_Distance">Дистанция</string>-->
<!--    <string name="btn_Time">Время</string>-->

    <string name="enter_Time">Введите время пробежки</string>
    <string name="enter_Dist">Введите расстояние</string>
    <string name="Choose_ok">Ok</string>
    <string name="Choose_cancel">Cancel</string>
    <string name="btnDate">Дата</string>
    <string name="btnTime">Время</string>
    <string name="btnDist">Дистанция</string>
    <string name="btnSave">Сохранить</string>
    <string name="btnClear">Очистить</string>
    <string name="tvHours">Часы</string>
    <string name="tvMinutes">Минуты</string>
    <string name="tvSeconds">Секунды</string>
</resources>