<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linear_date"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="5sp"
        android:layout_margin="10sp">
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:textSize="16dp" />
        <Button
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10sp"
            android:text="@string/btnDate"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_edit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="5sp"
        android:layout_margin="10sp">
        <EditText
            android:id="@+id/edDist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_Dist"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_time"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="5sp"
        android:layout_margin="10sp">
        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:textSize="16dp"/>
        <Button
            android:id="@+id/btnTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="@string/btnTime" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp"
        android:layout_margin="10sp">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:layout_weight="1"
            android:layout_margin="10sp"/>
        <Button
            android:id="@+id/bntClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnClear"
            android:layout_weight="1"
            android:layout_margin="10sp"/>
    </LinearLayout>
</LinearLayout>
