<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <NumberPicker
        android:id="@+id/numberPickerHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerMinutes"
        app:layout_constraintEnd_toStartOf="@+id/numberPickerMinutes"
        app:layout_constraintTop_toTopOf="@+id/numberPickerMinutes" />

    <NumberPicker
        android:id="@+id/numberPickerMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterTime" />

    <NumberPicker
        android:id="@+id/numberPickerHoursSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerMinutes"
        app:layout_constraintStart_toEndOf="@+id/numberPickerMinutes"
        app:layout_constraintTop_toTopOf="@+id/numberPickerMinutes" />

    <TextView
        android:id="@+id/tvEnterTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Choose_ok"
        app:layout_constraintEnd_toEndOf="@+id/numberPickerHoursSeconds"
        app:layout_constraintTop_toBottomOf="@+id/numberPickerMinutes" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Choose_cancel"
        app:layout_constraintEnd_toStartOf="@+id/button_ok"
        app:layout_constraintStart_toStartOf="@+id/numberPickerHours"
        app:layout_constraintTop_toTopOf="@+id/button_ok" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tvHours"
        app:layout_constraintBottom_toTopOf="@+id/numberPickerHours"
        app:layout_constraintEnd_toEndOf="@+id/numberPickerHours"
        app:layout_constraintStart_toStartOf="@+id/numberPickerHours" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tvMinutes"
        app:layout_constraintBottom_toTopOf="@+id/numberPickerMinutes"
        app:layout_constraintEnd_toEndOf="@+id/numberPickerMinutes"
        app:layout_constraintStart_toEndOf="@+id/numberPickerHours" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tvSeconds"
        app:layout_constraintBottom_toTopOf="@+id/numberPickerHoursSeconds"
        app:layout_constraintEnd_toEndOf="@+id/numberPickerHoursSeconds"
        app:layout_constraintStart_toEndOf="@+id/numberPickerMinutes"/>
</androidx.constraintlayout.widget.ConstraintLayout>