<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <NumberPicker
        android:id="@+id/numberPickerMinutes"
        android:layout_width="54sp"
        android:layout_height="100sp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerSeconds"
        app:layout_constraintEnd_toStartOf="@+id/numberPickerSeconds"
        app:layout_constraintTop_toTopOf="@+id/numberPickerSeconds" />

    <NumberPicker
        android:id="@+id/numberPickerSeconds"
        android:layout_width="54sp"
        android:layout_height="100sp"
        android:layout_marginTop="8dp"
        android:contextClickable="false"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbarSize="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <NumberPicker
        android:id="@+id/numberPickerMilliseconds"
        android:layout_width="54sp"
        android:layout_height="100sp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerSeconds"
        app:layout_constraintStart_toEndOf="@+id/numberPickerSeconds"
        app:layout_constraintTop_toTopOf="@+id/numberPickerSeconds" />

    <TextView
        android:id="@+id/tvEnterTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:text="@string/enter_Time"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/numberPickerMinutes"
        app:layout_constraintTop_toBottomOf="@+id/numberPickerMinutes">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:text="@string/Choose_cancel"
            android:textSize="9sp" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:text="@string/Choose_ok"
            android:textSize="9sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvMinutes"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/numberPickerMinutes"
        app:layout_constraintStart_toStartOf="@+id/numberPickerMinutes"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/tvSeconds"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/numberPickerSeconds"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/numberPickerMinutes"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterTime" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvMilliSeconds"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/numberPickerMilliseconds"
        app:layout_constraintStart_toEndOf="@+id/numberPickerSeconds"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>